<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.hisp.dhis</groupId>
    <artifactId>json-tree</artifactId>
    <packaging>jar</packaging>
    <name>DHIS JSON Tree</name>
    <url>https://github.com/dhis2/json-tree</url>
    <version>1.9.0-SNAPSHOT</version>

    <developers>
        <developer>
            <id>jbee</id>
            <name>Jan Bernitt</name>
            <email>jbernitt@dhis2.org</email>
            <organizationUrl>https://dhis2.org</organizationUrl>
        </developer>
    </developers>

    <description>
        This module provides a library to parse and browse JSON documents
        provided as input string. It is build in particular to extract JSON
        nodes by path with high performance. This is done by skipping nodes
        that are not of interest and by only building a cheap low level node
        representation for those nodes that are extracted.
    </description>

    <organization>
        <name>UiO</name>
        <url>http://www.dhis2.org</url>
    </organization>

    <licenses>
        <license>
            <name>BSD</name>
            <url>http://opensource.org/licenses/BSD-2-Clause</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git@github.com:dhis2/json-tree.git</connection>
        <developerConnection>scm:git:git@github.com:dhis2/json-tree.gitt</developerConnection>
        <url>git@github.com:dhis2/json-tree.git</url>
    </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/dhis2/json-tree</url>
    </issueManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <gpg.skip>true</gpg.skip>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.9.3</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>17</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <additionalOptions>-Xdoclint:-missing</additionalOptions>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.0.1</version>
                <configuration>
                    <gpgArguments>
                        <arg>--pinentry-mode</arg>
                        <arg>loopback</arg>
                    </gpgArguments>
                </configuration>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.8.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>true</autoPublish>
                    <deploymentName>DHIS JSON Tree</deploymentName>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
